fix - Fixed icons and added dark mode to new pages.

--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -6,6 +6,7 @@
 .list-title {
     font-size: 24px;
     margin-bottom: 2vh;
+    color:  var(--Black);
 }
 
 .song-list {
