--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,13 +19,72 @@
   cursor: pointer;
 }
 
-.butons {
+.buttons {
   display: flex;
-  gap: 20px; 
+  gap: 20px;
   margin-right: 60px;
+  font-size: 50px ;
 }
 
-.butons img {
-  display: inline-block;
+.add-icon {
   cursor: pointer;
+  font-size: 55px!important;
 }
+
+.light-icon {
+  color: var(--Color-button-light);
+}
+
+.dark-icon {
+  color: #EBF4F6;
+  font-size: 20px;
+}
+
+.toggle-icon {
+  cursor: pointer;
+  font-size: 55px !important;
+}
+
+.search-on {
+  display: none !important;
+}
+
+@media (max-width: 768px) {
+  .search-on {
+    display: block !important;
+  }
+
+  .header {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0%!important;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 100%;
+    padding: 0 10px; 
+    box-sizing: border-box; 
+
+  .buttons {
+    display: flex;
+    gap: 5px; 
+    margin-right: 0; 
+    font-size: 25px;
+  }
+
+  .add-icon {
+    cursor: pointer;
+    font-size: 30px!important;
+  }
+
+  .icon-header {
+    margin: 0; 
+    max-width: 10%; 
+  }
+
+  body {
+    overflow-x: hidden; 
+  }
+}
+
+}
+
