--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --Black: #000000;
   --DarkModeBackground: #021526;
   --Background-camp-text: #FAFAFA;
+  --Color-button-light: #03346E;
 
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -24,6 +25,7 @@ body {
   margin: 0;
   min-height: 100vh;
   min-width: 320px;
+  max-width: 100%;
   place-items: center;
   
 }
